tests/ui/errors/unsupported_attrs.stderr
error: `style:` is not supported on components/slots
 --> tests/ui/errors/unsupported_attrs.rs:6:19
  |
6 |         Component style:color="white";
  |                   ^^^^^

error: `prop:` is not supported on components/slots
  --> tests/ui/errors/unsupported_attrs.rs:12:19
   |
12 |         Component prop:value="1";
   |                   ^^^^

error: spread attributes not supported on components/slots
  --> tests/ui/errors/unsupported_attrs.rs:24:19
   |
24 |         Component {..attrs};
   |                   ^^^^^^^^^

error: `attr:` is not supported on elements
  --> tests/ui/errors/unsupported_attrs.rs:30:15
   |
30 |         input attr:class="no" type="text";
   |               ^^^^

error: `clone:` is not supported on elements
  --> tests/ui/errors/unsupported_attrs.rs:38:18
   |
38 |             span clone:notcopy {
   |                  ^^^^^
